--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -1,2 +1,5 @@
 FACEBOOK_APP_ID: '1020478604640927'
-FACEBOOK_APP_SECRET: '69f537bd8c7c61ea422895bff2628b3c'
+FACEBOOK_APP_SECRET: 69f537bd8c7c61ea422895bff2628b3c
+
+DATABASE_URL: sqlite3:db/development.sqlite3
+DATABASE_TEST_URL: sqlite3:db/test.sqlite3
